kubernetes/changedetection/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: changedetection
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: changedetection
      app.kubernetes.io/instance: changedetection
  template:
    metadata:
      name: changedetection
      labels:
        app.kubernetes.io/name: changedetection
        app.kubernetes.io/instance: changedetection
    spec:
      containers:
      - name: changedetection
        image: dgtlmoon/changedetection.io:0.55.8@sha256:5438423d5e906eff4e8f7886823482ad23f472bf7b8530ccaca89fb48c337882
        ports:
        - name: changedetection
          containerPort: 5000
        volumeMounts:
        - name: changedetection-data
          mountPath: /datastore
      - name: browserless
        image: dgtlmoon/sockpuppetbrowser:0.0.3@sha256:23a7be698216407648b6c78fc55de0411bde550635edc30347373c86a5176fad
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: shm
          mountPath: /dev/shm
        livenessProbe:
          httpGet:
            path: /stats
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /stats
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: changedetection-data
        persistentVolumeClaim:
          claimName: changedetection-data
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 2Gi
